--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
-version: "3"
+version: "3.8"
 services:
-  train:
-    image: train:v1
+  movies:
+    image: sumanth7420/paytmmovies:latest
     ports:
       - "81:80"
     deploy:
       replicas: 3
 
-  movie:
-    image: movie:v1
+  train:
+    image: sumanth7420/paytmtrain:latest
     ports:
       - "82:80"
     deploy:
       replicas: 3      
 
   dth:
-    image: dth:v1
+    image: sumanth7420/paytmdth:latest
     ports:
       - "83:80"
     deploy:
       replicas: 3  
 
   recharge:
-    image: recharge:v1
+    image: sumanth7420/paytmrecharge:latest
     ports:
       - "84:80"
     deploy:
